maybe fixed mobile layout issue...//

--- a/style.css
+++ b/style.css
@@ -481,7 +481,7 @@ footer {
 
 /* Shopping cart */
 .cart-container {
-    max-width: 1100px;
+    width: 100%;
     margin: 0 auto;
     padding: 0 20px;
 }
